--- a/404.md
+++ b/404.md
@@ -3,11 +3,8 @@ layout: default
 title: 404 - Page not found
 permalink: /404.html
 ---
+## Whoops, This page doesn't exist
+### Move along. There's nothing to see here.
+[Back to Home](./)
 
-<div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
-  <br/>
-
-  <img src="{{ 'assets/img/404.jpg' | relative_url }}" alt="Not found" />
-</div>
+![Not found](/assets/img/404.jpg)
