--- a/.github/404.md
+++ b/.github/404.md
@@ -3,3 +3,12 @@ layout: default
 title: 404 - Page not found
 permalink: /404.html
 ---
+
+<div class="text-center">
+  <h2>Whoops, This page doesn't exist.</h2>
+  <h3>Move along. There's nothing to see here.</h3>
+  <br/>
+  <p><a href="https://armandsl.github.io/">Back to Home</a></p>
+
+  <img src="{{ 'assets/img/404.jpg' | relative_url }}" alt="Not found" />
+</div>
